2008-11-30  higepon  <higepon@users.sourceforge.jp>

        * compiler.scm (imap): Adde inlinable map.

        * tools/psyntax-r6rs/rev10_to_10/Makefile (all): Added normal mode and rescue mode.

2008-11-29  higepon  <higepon@users.sourceforge.jp>

        * example/affine.scm : Added.

        * Psyntax pass through the and/or to backend.

2008-11-28  higepon  <higepon@users.sourceforge.jp>

        * lib/lambda/wiki.ss: Applied a patch by xsloader.

        * CompilerProcedures.cpp (pass4FixupLabel): Added peephole-optimization for VM on C++.

        * compiler.scm: Added peephole-optimization for VM on gauche.

2008-11-27  higepon  <higepon@users.sourceforge.jp>

        * scripts/bench2.scm: Added.

        * lib/mosh/condition.ss : Changed see https://ironscheme.svn.codeplex.com/svn/IronScheme/IronSchemeConsole/build/conditions.ss
                                  and https://bugs.launchpad.net/ikarus/+bug/302023.

2008-11-26  higepon  <higepon@users.sourceforge.jp>

        * Added : make-promise, delay and force.

        * tools/psyntax-r6rs/rev10_to_10/psyntax/internal.ss (psyntax): Tuning.

        * Added: tiny clos.

2008-11-26  kokosabu  <kokosabu@gmail.com>

        * Implemented All of procedures defined in R6RS lib 11.2 Fixnums.

2008-11-25  higepon  <higepon@users.sourceforge.jp>

        * Flonum.h : Fixed dereferencing type-punned pointer will break strict-aliasing rules.

        * lib/core/r5rs.scm: Added R5RS comppatible procedures.

        * Passed all of base tests of R6RS test suite.

        * VM.cpp (run): Fixed the bug when continuation is called without argument.

        * Added: COMPILE_ERROR instruction for error detection of letrec.

2008-11-25  kokosabu  <kokosabu@gmail.com>

        * Added : fxbit-count, fxlength, fxfirst-bit-set, fxbit-set?, fxcopy-bit, fxbit-field,
                  fxcopy-bit-field, fxarithmetic-shift, fxarithmetic-shift-left, fxarithmetic-shift-right,